--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@azure/service-bus": "^1.0.3"
+    "@azure/service-bus": "^1.0.3",
+    "command-line-args": "^5.1.1"
   }
 }
